Fix alignment on small screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -61,6 +61,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     cursor: pointer;
 }
 
